new grafana webinterface

--- a/etc/lighttpd/external.conf
+++ b/etc/lighttpd/external.conf
@@ -1,2 +1,6 @@
-# index-file.names            = ( "settings.cgi", "index.php", "index.html", "index.lighttpd.html" )
-url.redirect                = ( "^/$" => "/cgi-bin/settings.cgi" )
+$HTTP["url"] =~ "^/" {
+  $HTTP["host"] =~ ".*" {
+    url.redirect = ( "^/$" => "http://%0:3001" )
+    url.redirect-code = 302
+  }
+}
